--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "mocha": "^1.21.5",
     "mocha-phantomjs": "^3.5.1",
     "phantomjs": "^1.9.11",
+    "requirejs": "^2.1.15",
     "sinon": "^1.10.3",
     "underscore": "^1.7.0"
   },
